# bidiwave

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  spike.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
api/browsing/: index.html
api/client/: index.html
api/config/: index.html
api/events/: index.html
api/exceptions/: index.html
api/input/: index.html
api/network/: index.html
api/remote-value/: index.html
api/script/: index.html
api/session/: index.html
api/storage/: index.html
bidiwave/: __init__.py  client.py  config.py  exceptions.py
bidiwave/_internal/: logging.py
bidiwave/convenience/: page.py
bidiwave/events/: dispatcher.py  handlers.py  queue.py
bidiwave/modules/: browsing.py  cdp.py  emulation.py  input.py  log.py  network.py  permissions.py  preload.py  script.py  session.py  storage.py  webextension.py
bidiwave/protocol/: capabilities.py  commands.py  constants.py  events.py  remote_value.py  responses.py  results.py
bidiwave/transport/: connection.py  correlation.py  serializer.py
cookbook/: index.html
docs/: cookbook.md  error-handling.md  index.md  protocol-reference.md  quick-start.md  spike-notes.md
docs/api/: browsing.md  cdp.md  client.md  config.md  emulation.md  events.md  exceptions.md  input.md  log.md  network.md  permissions.md  preload.md  remote-value.md  script.md  session.md  storage.md  web-extension.md
error-handling/: index.html
protocol-reference/: index.html
quick-start/: index.html
spike-notes/: index.html
tests/: conftest.py
(+78 files in other folders)
